[package]
name = "nostress"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "socks", "default-tls", "rustls-tls", "multipart"] }
futures = "0.3"
rand = "0.8"
url = "2"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
quinn = { version = "0.11", default-features = false, features = ["native-certs"] }
pnet = "0.34"